- grid 이미지 작업 중

--- a/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
@@ -21,7 +21,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">4 개의 수직 트랙 (열)과 2 개의 수평 트랙 (행)이있는 명시적 그리드</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-explicit-grid.png" alt="4 개의 수직 트랙 (열)과 2 개의 수평 트랙 (행)이있는 명시적 그리드" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid.svg" alt="4 개의 수직 트랙 (열)과 2 개의 수평 트랙 (행)이있는 명시적 그리드">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-explicit-grid.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -34,7 +34,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">반복 표기법으로 생성 된 100px 너비의 세로 트랙 4 개가 포함 된 명시적 그리드</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-explicit-grid-auto-fitting.png" alt="반복 표기법으로 생성 된 100px 너비의 세로 트랙 4 개가 포함 된 명시적 그리드" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fitting.svg" alt="반복 표기법으로 생성 된 100px 너비의 세로 트랙 4 개가 포함 된 명시적 그리드">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-explicit-grid-auto-fitting.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
