--- a/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-explicit-grid-rows.html
+++ b/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-explicit-grid-rows.html
@@ -19,7 +19,7 @@
 				padding: 10px;
 				border: none;
 				border-radius: 5px;
-				background-color: #D73B38;
+				background-color: #1E73FF;
 				color: #ffffff;
 			}
 
