--- a/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-explicit-grid.html
+++ b/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-explicit-grid.html
@@ -8,18 +8,20 @@
 		<title>UXKM CSS3 Grid Layout: The explicit grid</title>
 		<style>
 			*{margin:0;padding:0;box-sizing:border-box;}
+			body {padding:20px;}
 			.item, .grid-item {
 				padding: 10px;
 				border: none;
 				border-radius: 5px;
-				background-color: #D73B38;
+				background-color: #1E73FF;
 				color: #ffffff;
+				text-align:center;
 			}
 
 			.grid {
 				display: grid;
 				grid-template-columns: 1fr 1fr 1fr 1fr;
-				grid-template-rows: 100px 100px;
+				grid-template-rows: 50px 50px;
 				grid-gap: 20px;
 			}
 		</style>
@@ -27,9 +29,7 @@
 	<body>
 		<section class="grid">
 			<div class="item">item1</div>
-			<div class="item">item2</div>  
-			<div class="item">item3</div>
-			<div class="item">item4</div>
+			<div class="item">item2</div>
 		</section>
 	</body>
 </html>
