--- a/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-implicit-grids.html
+++ b/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-implicit-grids.html
@@ -8,11 +8,12 @@
 		<title>UXKM CSS3 Grid Layout: implicit tracks</title>
 		<style>
 			*{margin:0;padding:0;box-sizing:border-box;}
+			body {padding:20px;}
 			.item, .grid-item {
 				padding: 10px;
 				border: none;
 				border-radius: 5px;
-				background-color: #D73B38;
+				background-color: #1E73FF;
 				color: #ffffff;
 			}
 
