- grid 이미지 작업 중

--- a/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
@@ -47,7 +47,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">그리드 컨테이너에 맞게 너비가 100px 인 수직 트랙을 반복</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-explicit-grid-auto-fill.png" alt="그리드 컨테이너에 맞게 너비가 100px 인 수직 트랙을 반복" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fill.svg" alt="그리드 컨테이너에 맞게 너비가 100px 인 수직 트랙을 반복">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-explicit-grid-auto-fill.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -60,7 +60,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">auto-fit 키워드를 사용한 반복 표기법은 그리드 컨테이너에 필요한만큼 많은 트랙을 만듬</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-explicit-grid-auto-fit.png" alt="auto-fit 키워드를 사용한 반복 표기법은 그리드 컨테이너에 필요한만큼 많은 트랙을 만듬" class="mt_m max-w600">
+					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fit.svg" alt="auto-fit 키워드를 사용한 반복 표기법은 그리드 컨테이너에 필요한만큼 많은 트랙을 만듬">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-explicit-grid-auto-fit.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -73,7 +73,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">세로 트랙보다 많은 항목이 있으면 더 많은 행이 추가</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-explicit-grid-rows.png" alt="세로 트랙보다 많은 항목이 있으면 더 많은 행이 추가" class="mt_m max-w500">
+					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-rows.svg" alt="세로 트랙보다 많은 항목이 있으면 더 많은 행이 추가">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-explicit-grid-rows.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -86,7 +86,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">두 축에서 auto-fill 키워드를 사용한 반복 표기법</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-explicit-grid-auto-fill-both.png" alt="두 축에서 auto-fill 키워드를 사용한 반복 표기법" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fill-both.svg" alt="두 축에서 auto-fill 키워드를 사용한 반복 표기법">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-explicit-grid-auto-fill-both.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -110,7 +110,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">암시적 선 및 트랙을 생성하는 명시적 그리드 외부에 배치 된 두 개의 항목</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-implicit-grids.png" alt="암시적 선 및 트랙을 생성하는 명시적 그리드 외부에 배치 된 두 개의 항목" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids.svg" alt="암시적 선 및 트랙을 생성하는 명시적 그리드 외부에 배치 된 두 개의 항목">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-implicit-grids.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -123,7 +123,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">암시적 트랙의 고정 너비 및 높이</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-implicit-grids-tracks.png" alt="암시적 트랙의 고정 너비 및 높이" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids-tracks.svg" alt="암시적 트랙의 고정 너비 및 높이">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-implicit-grids-tracks.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -136,7 +136,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">한 행과 한 열씩 시작으로 확장 된 암시적 그리드</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-implicit-grids2.png" alt="한 행과 한 열씩 시작으로 확장 된 암시적 그리드" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids2.svg" alt="한 행과 한 열씩 시작으로 확장 된 암시적 그리드">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-implicit-grids-grid.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -149,10 +149,10 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">항목 수가 셀 수를 초과하면 행 대신 새 열이 추가</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-implicit-grids-auto-flow.png" alt="항목 수가 셀 수를 초과하면 행 대신 새 열이 추가" class="mt_m max-w800">
+					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids-auto-flow.svg" alt="항목 수가 셀 수를 초과하면 행 대신 새 열이 추가">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-implicit-grids-auto-flow.html">
-					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
@@ -162,7 +162,7 @@
 			<section class="mt_l indent">
 				<h4 class="ml_mn">명시적인 선과 트랙이없는 암시적 그리드</h4>
 				<figure class="img_figure mt_m">
-					<img src="/ukncs/images/css/grid-implicit-grids-only.png" alt="명시적인 선과 트랙이없는 암시적 그리드" class="mt_m max-w600">
+					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids-only.svg" alt="명시적인 선과 트랙이없는 암시적 그리드">
 				</figure>
 				<div class="view_editor edit_code mt_m" data-target="/css/step03/4.5.grid/4.5.4.grid-implicit-grids-only.html">
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
