--- a/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-implicit-grids-auto-flow_bak.html
+++ b/ukncs/tutorials/css/step03/4.5.grid/4.5.4.grid-implicit-grids-auto-flow_bak.html
@@ -26,22 +26,18 @@
 			.grid {
 				display: grid;
 				grid-template-columns: repeat(4, 1fr);
-				grid-template-rows: 50px 50px;
+				grid-template-rows: 100px 100px;
 				grid-gap: 20px;
-				margin-top: 10px;
 			}
 
 			.grid2 {
 				grid-auto-flow: column;
 			}
-			hr {
-				margin-top:20px;
-			}
 		</style>
 	</head>
 	<body>
 		<h2><code>grid-auto-flow: row;</code></h2>
-		<p>자동 배치 알고리즘은 각 행을 차례로 채워 항목을 배치합니다.</p>
+		<p> The auto-placement algorithm places items by filling each row in turn</p>
 		<section class="grid">
 			<div class="item">item1</div>
 			<div class="item">item2</div>  
@@ -50,9 +46,9 @@
 			<div class="item">item5</div>
 			<div class="item">item6</div>
 		</section>
-		<hr>
+
 		<h2><code>grid-auto-flow: column;</code></h2>
-		<p>자동 배치 알고리즘은 각 열을 차례로 채워 항목을 배치합니다.</p>
+		<p> The auto-placement algorithm places items by filling each column in turn</p>
 		<section class="grid grid2">
 			<div class="item">item1</div>
 			<div class="item">item2</div>  
