--- a/ukncs/tutorials/css/step03/4.5.grid/4.5.5.grid-auto-flow.html
+++ b/ukncs/tutorials/css/step03/4.5.grid/4.5.5.grid-auto-flow.html
@@ -8,14 +8,14 @@
 		<title>UXKM CSS3 grid-auto-flow</title>
 		<style>
 			*{margin:0;padding:0;box-sizing:border-box;}
-			div{border:1px solid;}
+			div{border:2px solid blue;}
 			.container{
 				display: grid;
 				grid-template-columns: 60px 60px 60px 60px 60px;
 				grid-template-rows: 30px 30px;
 
 				margin:20px;
-				border:2px solid;
+				border:2px solid red;
 			}
 
 			.row {
